--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.testng:testng:7.1.0'
-    testImplementation 'org.testng:testng:7.1.0'
+    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.1'
 }
 
 test {
-    useTestNG()
+    useJUnit()
 }
